# debian-libmongo-client

./: NEWS  configure.ac
debian/: changelog  control  copyright  libmongo-client0.symbols  rules
src/: Makefile.am
tests/: Makefile.am
tests/func/mongo/sync/: f_sync_auto_reconnect_cache.c  f_sync_safe_mode.c  f_sync_safe_mode_cache.c  f_sync_write_error.c
tests/libtap/: tap.c  test.c  test.h
tests/unit/mongo/sync/: sync_cmd_authenticate_cache.c  sync_cmd_get_last_error_full.c  sync_conn_seed_add_cache.c  sync_connect_cache.c  sync_connect_from_cache_enforce_primary.c
tests/unit/mongo/utils/: parse_addr.c
